done add wallet basic flow, insert tokens, price and holdings to db. before start holdings list UI displaying from db

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -7,5 +7,6 @@
   "next": "Next",
   "holdings": "Holdings",
   "watchlist": "Watchlist",
-  "settings": "Settings"
+  "settings": "Settings",
+  "error_generic": "Something went wrong, please try again later."
 }
