done holdings list fully display assets in wallet, before start transactions syncing

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -8,5 +8,6 @@
   "holdings": "Holdings",
   "watchlist": "Watchlist",
   "settings": "Settings",
-  "error_generic": "Something went wrong, please try again later."
+  "error_generic": "Something went wrong, please try again later.",
+  "no_wallet": "No wallet added, please add a wallet address to begin."
 }
